2006-04-27  David Reveman  <davidr@novell.com>

	* configure.ac: Bump version to 0.0.10.

	* plugins/decoration.c: Remove debug variable.

	* src/window.c (addWindow): Check if window is minimized. (Dan Winship)

	* plugins/compiz.schemas: Regen (snapoff and maximize_effect).

	* plugins/wobbly.c: Add maximize effect.

	* plugins/zoom.c:
	* plugins/water.c:
	* plugins/rotate.c:
	* plugins/resize.c:
	* plugins/move.c:
	* src/event.c:
	* src/screen.c:
	* src/display.c:
	* include/compiz.h: Add proper warp pointer interface and update
	all plugins to use it.

2006-04-26  Dan Winship  <danw@novell.com>

	* src/event.c (handleEvent): activate window on Button2 click in
	addition to Button1 and Button3.

	* plugins/gconf.c (gconfSetOption): gconf_value_compare against
	the old value for list-type options too.
	(gconfInitOption): Change the call to gconf_client_get_entry to
	request the default value again; the fix to gconfSetOption will
	prevent the infinite loops that happened before.

2006-04-26  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c (update_shadow): 
	Remove comment that is no longer valid.

	* plugins/move.c: Support for maximized windows snap-off. Based on
	patch by Colin Guthrie.

	* plugins/rotate.c (rotateHandleEvent): Don't do edge flipping
	when a horizontally maximized or fullscreen window is grabbed.

	* plugins/zoom.c:
	* plugins/rotate.c:
	* plugins/resize.c:
	* plugins/move.c:
	* src/screen.c:
	* include/compiz.h: Add warpPointerToScreenPos and use it everywhere
	we want to invisibly warp the pointer.

2006-04-25  David Reveman  <davidr@novell.com>

	* gnome/window-decorator/gnome-window-decorator.c:
	* plugins/decoration.c: Add clamp and min size.

	* plugins/decoration.c (decorReleaseDecoration): Fix memory leak.

	* plugins/scale.c: Click on background leaves scale mode and enters
	show desktop mode. (Dan Winship)

	* plugins/minimize.c (minHandleEvent): Initialize scale and
	translate properly.
